man: minor formatting/typos fixes
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -21,12 +21,12 @@
 .\" 
 .TH TUNED_ADM "8" "23 Sep 2014" "Fedora Power Management SIG" "tuned"
 .SH NAME
-tuned-adm \- commandline tool for switching between different tuning profiles
+tuned\-adm - commandline tool for switching between different tuning profiles
 .SH SYNOPSIS
-.B tuned-adm 
+.B tuned\-adm 
 .B 
 .BR [ " list ", " active ", " profile <profile> ", " off " ]
-.br
+.BR
 .SH DESCRIPTION
 This command line utility allows you to switch between user definable tuning
 profiles. Several predefined profiles are already included. You can even
@@ -66,18 +66,18 @@ performance or balanced profile if unsure.
 Switch off tuned.
 
 .SH "FILES"
-.nf
+.NF
 /etc/tuned/*
 /usr/lib/tuned/*
 
 .SH "SEE ALSO"
 .BR tuned (8)
 .BR tuned\-conf (5)
-.BR tuned-profiles (7)
-.BR tuned-profiles-atomic (7)
-.BR tuned-profiles-sap (7)
-.BR tuned-profiles-sap-hana (7)
-.BR tuned-profiles-compat (7)
+.BR tuned\-profiles (7)
+.BR tuned\-profiles\-atomic (7)
+.BR tuned\-profiles\-sap (7)
+.BR tuned\-profiles\-sap\-hana (7)
+.BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
