--- a/man/tuned-profiles-sap-hana.7
+++ b/man/tuned-profiles-sap-hana.7
@@ -44,7 +44,7 @@ regarding semaphores. It decreases virtual memory swappiness and disables large
 recieve offload for the network adapter.
 
 .SH "FILES"
-.nf
+.NF
 .I /etc/tuned/*
 .I /usr/lib/tuned/*
 
@@ -54,7 +54,7 @@ recieve offload for the network adapter.
 .BR tuned\-profiles (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
-.BR tuned\-profiles\-sap\-compat (7)
+.BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
