--- a/man/tuned-profiles-sap.7
+++ b/man/tuned-profiles-sap.7
@@ -36,7 +36,7 @@ settings regarding shared memory, semaphores and maximum number of memory map
 areas a process may have.
 
 .SH "FILES"
-.nf
+.NF
 .I /etc/tuned/*
 .I /usr/lib/tuned/*
 
@@ -46,7 +46,7 @@ areas a process may have.
 .BR tuned\-profiles (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap\-hana (7)
-.BR tuned\-profiles\-sap\-compat (7)
+.BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
