--- a/man/tuned.8
+++ b/man/tuned.8
@@ -21,7 +21,7 @@
 .\".
 .TH "tuned" "8" "28 Mar 2012" "Fedora Power Management SIG" "Adaptive system tuning daemon"
 .SH NAME
-tuned \- dynamic adaptive system tuning daemon
+tuned - dynamic adaptive system tuning daemon
 .SH SYNOPSIS
 \fBtuned\fP [\fIoptions\fP]
 .SH DESCRIPTION
@@ -60,15 +60,15 @@ This is intended for debugging purposes.
 .BI  \-v "\fR, \fP" \-\-version
 Show version information.
 .SH "FILES"
-.nf
+.NF
 /etc/tuned
-/usr/share/doc/tuned-*/README
+/usr/share/doc/tuned/README
 .SH "SEE ALSO"
 .LP
 tuned.conf(5)
-tuned-adm(8)
+tuned\-adm(8)
 .SH AUTHOR
-.nf
+.NF
 Jan Kaluža <jkaluza@redhat.com>
 Jan Včelák <jvcelak@redhat.com>
 Jaroslav Škarvada <jskarvad@redhat.com>
