--- a/man/netdevstat.8
+++ b/man/netdevstat.8
@@ -1,6 +1,6 @@
 .TH "netdevstat" "8" "13 Jan 2011" "Phil Knirsch" "Tool for recording network activity"
 .SH NAME
-netdevstat \- tool for recording network activity
+netdevstat - tool for recording network activity
 .SH SYNOPSIS
 \fBnetdevstat\fP [\fIupdate interval\fP] [\fItotal duration\fP] [\fIdisplay histogram\fP]
 .SH DESCRIPTION
