man: fixed typo in scomes manual page
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/scomes.8
+++ b/man/scomes.8
@@ -5,7 +5,7 @@ scomes - tool for watching system resources
 \fBscomes\fP \-c "binary [binary arguments ...]" [timer]
 .SH DESCRIPTION
 \fBscomes\fR is a simple systemtap script for watching activity of one process. Syscalls count,
-userspace and kernelspace ticks, read and written bytes, transitted and received bytes and polling
+userspace and kernelspace ticks, read and written bytes, transmitted and received bytes and polling
 syscalls are measured.
 
 .TP
