--- a/man/tuned-profiles-sap.7
+++ b/man/tuned-profiles-sap.7
@@ -46,6 +46,7 @@ areas a process may have.
 .BR tuned\-profiles (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap\-hana (7)
+.BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
