--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -128,6 +128,7 @@ performance related kernel parameters.
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap-hana (7)
+.BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
