profiles: oracle profile delivered in tuned-profiles-oracle subpackage
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-profiles-compat.7
+++ b/man/tuned-profiles-compat.7
@@ -86,6 +86,7 @@ set to performance.
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
+.BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .SH AUTHOR
 .NF
