--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -111,12 +111,6 @@ settings.
 Profile optimized for virtual hosts based on throughput\-performance profile.
 It additionally enables more aggresive writeback of dirty pages.
 
-.TP
-.BI "oracle"
-Profile optimized for Oracle databases based on throughput\-performance profile.
-It additionaly disables transparent huge pages and modifies some other
-performance related kernel parameters.
-
 .SH "FILES"
 .NF
 .I /etc/tuned/*
@@ -128,6 +122,7 @@ performance related kernel parameters.
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap-hana (7)
+.BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
