--- a/man/tuned-profiles-realtime.7
+++ b/man/tuned-profiles-realtime.7
@@ -43,6 +43,7 @@ Profile optimized for realtime.
 .BR tuned\-profiles (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
+.BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
