profiles: added realtime-virtual-guest/host profiles
Profiles shipped in tuned-profiles-nfv subpackage. The content was provided
by Jeremy Eder <jeder@redhat.com> and Clark Williams <williams@redhat.com>.

Resolves: rhbz#1228803

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -69,7 +69,7 @@ performance or balanced profile if unsure.
 
 .TP
 .B off
-Unload tunings..
+Unload tunings.
 
 .SH "FILES"
 .NF
@@ -83,6 +83,9 @@ Unload tunings..
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
+.BR tuned\-profiles\-oracle (7)
+.BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
