--- a/man/tuned-profiles-oracle.7
+++ b/man/tuned-profiles-oracle.7
@@ -47,6 +47,7 @@ performance related kernel parameters.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
