--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -124,6 +124,7 @@ It additionally enables more aggresive writeback of dirty pages.
 .BR tuned\-profiles\-sap-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
