--- a/man/tuned-profiles-atomic.7
+++ b/man/tuned-profiles-atomic.7
@@ -54,6 +54,7 @@ netfilter connections tracking.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
