--- a/man/tuned-profiles-compat.7
+++ b/man/tuned-profiles-compat.7
@@ -88,6 +88,7 @@ set to performance.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
