--- a/man/tuned-profiles-sap-hana.7
+++ b/man/tuned-profiles-sap-hana.7
@@ -56,6 +56,7 @@ recieve offload for the network adapter.
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-nfv (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
