--- a/man/tuned.conf.5
+++ b/man/tuned.conf.5
@@ -29,7 +29,14 @@ Every plugin section can contain following sections:
 
 .TP
 type=
-Plugin type. Currently there are following plugins: disk, script, net, cpu, eeepc_she.
+Plugin type. Currently there are following upstream plugins: audio, bootloader, cpu, disk,
+eeepc_she, mounts, net script, selinux, scheduler, sysctl, sysfs, usb, video, vm. This
+list may be incomplete. If you installed tuned through RPM you can list upstream plugins by
+the following command:
+.B rpm -ql tuned | grep 'plugins/plugin_.*.py$'
+Check the plugins directory returned by this command to see all plugins (e.g. plugins
+provided by 3rd party packages).
+
 .TP
 devices=
 Comma separated list of devices which should be tuned by this plugin instance.
