man: oracle profile documented in individual manual page
Related: rhbz#1196294

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/doc/tuned-profiles-sap-hana.7
+++ b/doc/tuned-profiles-sap-hana.7
@@ -52,6 +52,7 @@ recieve offload for the network adapter.
 .BR tuned\-adm (1)
 .BR tuned\-profiles (7)
 .BR tuned\-profiles\-sap (7)
+.BR tuned\-profiles\-oracle (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
