--- a/doc/tuned-profiles-oracle.7
+++ b/doc/tuned-profiles-oracle.7
@@ -1,6 +1,6 @@
 .\"/* 
 .\" * All rights reserved
-.\" * Copyright (C) 2009-2014 Red Hat, Inc.
+.\" * Copyright (C) 2009-2015 Red Hat, Inc.
 .\" * Authors: Jaroslav Škarvada
 .\" *
 .\" * This program is free software; you can redistribute it and/or
@@ -18,33 +18,32 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES_SAP "7" "23 Sep 2014" "Fedora Power Management SIG" "tuned"
+.TH TUNED_PROFILES_ORACLE "7" "24 Nov 2015" "Fedora Power Management SIG" "tuned"
 .SH NAME
-tuned\-profiles\-sap - description of profiles provided for the SAP NetWeaver
+tuned\-profiles\-oracle - description of profiles provided for the Oracle
 
 .SH DESCRIPTION
-These profiles provides performance optimizations for the SAP NetWeaver applications.
+These profiles provides performance optimizations for the Oracle loads.
 
 .SH PROFILES
 The following profiles are provided:
 
 .TP
-.BI "sap\-netweaver"
-A performance optimized profile for the SAP NetWeaver applications.
-It is based on throughput\-performance profile. It additionally tunes sysctl
-settings regarding shared memory, semaphores and maximum number of memory map
-areas a process may have.
+.BI "oracle"
+Profile optimized for Oracle databases based on throughput\-performance profile.
+It additionaly disables transparent huge pages and modifies some other
+performance related kernel parameters.
 
 .SH "FILES"
 .NF
-/etc/tune-profiles/*
+/etc/tune\-profiles/*
 
 .SH "SEE ALSO"
 .BR tuned (8)
 .BR tuned\-adm (1)
 .BR tuned\-profiles (7)
+.BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
-.BR tuned\-profiles\-oracle (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
