man: fixed typo in tuned-profiles-oracle
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/doc/tuned-profiles-oracle.7
+++ b/doc/tuned-profiles-oracle.7
@@ -23,7 +23,7 @@
 tuned\-profiles\-oracle - description of profiles provided for the Oracle
 
 .SH DESCRIPTION
-These profiles provides performance optimizations for the Oracle loads.
+These profiles provide performance optimizations for the Oracle loads.
 
 .SH PROFILES
 The following profiles are provided:
