Added tuned icon and desktop file for GUI
Icon provided by Mariia Leonova <mleonova@redhat.com>.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,3 +15,6 @@ Other contributors:
 - Jarod Wilson
 - Jan Hutař
 - Arnaldo Carvalho de Melo <acme@redhat.com> - perf code for plugin_scheduler
+
+Icon:
+- Mariia Leonova <mleonova@redhat.com>
