--- a/README
+++ b/README
@@ -93,3 +93,10 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 Full text of the license is enclosed in COPYING file.
+
+
+The icon:
+
+The Tuned icon was created by Mariia Leonova <mleonova@redhat.com> and it is
+licensed under Creative Commons Attribution-ShareAlike 3.0 license
+(http://creativecommons.org/licenses/by-sa/3.0/legalcode).
