--- a/man/tuned-profiles-nfv.7
+++ b/man/tuned-profiles-nfv.7
@@ -50,6 +50,7 @@ Profile optimized for virtual hosts based on realtime profile.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
