--- a/man/tuned-profiles-sap.7
+++ b/man/tuned-profiles-sap.7
@@ -49,6 +49,7 @@ areas a process may have.
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
