--- a/man/tuned-profiles-compat.7
+++ b/man/tuned-profiles-compat.7
@@ -89,6 +89,7 @@ set to performance.
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .SH AUTHOR
 .NF
 Jaroslav Škarvada <jskarvad@redhat.com>
