--- a/man/tuned-profiles-oracle.7
+++ b/man/tuned-profiles-oracle.7
@@ -48,6 +48,7 @@ performance related kernel parameters.
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
