--- a/man/tuned-profiles-realtime.7
+++ b/man/tuned-profiles-realtime.7
@@ -46,6 +46,7 @@ Profile optimized for realtime.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
