--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -125,6 +125,7 @@ It additionally enables more aggresive writeback of dirty pages.
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
