nfv: fixed quoting in manual page
Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-profiles-nfv.7
+++ b/man/tuned-profiles-nfv.7
@@ -29,11 +29,11 @@ These profiles are provided for the Network Function Virtualization (NFV).
 The following profiles are provided:
 
 .TP
-.BI "realtime-virtual-guest"
+.BI "realtime\-virtual\-guest"
 Profile optimized for virtual guests based on realtime profile.
 
 .TP
-.BI "realtime-virtual-host"
+.BI "realtime\-virtual\-host"
 Profile optimized for virtual hosts based on realtime profile.
 
 .SH "FILES"
