man: report bugs pointed to Red Hat bugzilla
Added diacritic marks to contributor names where appropriate to show
correct credit.

Signed-off-by: Jaroslav Škarvada <jskarvad@redhat.com>

--- a/man/tuned-main.conf.5
+++ b/man/tuned-main.conf.5
@@ -77,4 +77,4 @@ tuned(8)
 .SH AUTHOR
 Written by Jaroslav Škarvada <jskarvad@redhat.com>.
 .SH REPORTING BUGS
-Report bugs to <power-management@lists.fedoraproject.org>.
+Report bugs to https://bugzilla.redhat.com/.
