--- a/man/tuned-profiles-nfv-host.7
+++ b/man/tuned-profiles-nfv-host.7
@@ -18,19 +18,19 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES_REALTIME "7" "30 Mar 2017" "Fedora Power Management SIG" "tuned"
+.TH TUNED_PROFILES_NFV_HOST "7" "30 Mar 2017" "Fedora Power Management SIG" "tuned"
 .SH NAME
-tuned\-profiles\-realtime - description of profiles provided for the realtime
+tuned\-profiles\-nfv\-host - description of profile provided for the NFV host
 
 .SH DESCRIPTION
-These profiles are provided for the realtime.
+The profile is provided for the Network Function Virtualization (NFV) host.
 
 .SH PROFILES
-The following profiles are provided:
+The following profile is provided:
 
 .TP
-.BI "realtime"
-Profile optimized for realtime.
+.BI "realtime\-virtual\-host"
+Profile optimized for virtual hosts based on realtime profile.
 
 .SH "FILES"
 .NF
@@ -45,7 +45,7 @@ Profile optimized for realtime.
 .BR tuned\-profiles\-sap (7)
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
-.BR tuned\-profiles\-nfv\-host (7)
+.BR tuned\-profiles\-realtime (7)
 .BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
