--- a/man/tuned-profiles-oracle.7
+++ b/man/tuned-profiles-oracle.7
@@ -1,6 +1,6 @@
 .\"/* 
 .\" * All rights reserved
-.\" * Copyright (C) 2015 Red Hat, Inc.
+.\" * Copyright (C) 2015-2017 Red Hat, Inc.
 .\" * Authors: Jaroslav Škarvada
 .\" *
 .\" * This program is free software; you can redistribute it and/or
@@ -18,7 +18,7 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES_ORACLE "7" "26 Jun 2015" "Fedora Power Management SIG" "tuned"
+.TH TUNED_PROFILES_ORACLE "7" "30 Mar 2017" "Fedora Power Management SIG" "tuned"
 .SH NAME
 tuned\-profiles\-oracle - description of profiles provided for the Oracle
 
@@ -47,7 +47,8 @@ performance related kernel parameters.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-atomic (7)
 .BR tuned\-profiles\-realtime (7)
-.BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-nfv\-host (7)
+.BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
