--- a/man/tuned-profiles-cpu-partitioning.7
+++ b/man/tuned-profiles-cpu-partitioning.7
@@ -1,6 +1,6 @@
 .\"/* 
 .\" * All rights reserved
-.\" * Copyright (C) 2015 Red Hat, Inc.
+.\" * Copyright (C) 2015-2017 Red Hat, Inc.
 .\" * Authors: Jaroslav Škarvada
 .\" *
 .\" * This program is free software; you can redistribute it and/or
@@ -18,7 +18,7 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES_CPU_PARTITIONING "7" "7 Oct 2016" "tuned"
+.TH TUNED_PROFILES_CPU_PARTITIONING "7" "30 Mar 2017" "tuned"
 .SH NAME
 tuned\-profiles\-cpu\-partitioning - description of profile provided for for CPU partitioning
 
@@ -46,7 +46,8 @@ Profile optimized for CPU partitioning.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
-.BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-nfv\-host (7)
+.BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
 .NF
