--- a/man/tuned-profiles-sap.7
+++ b/man/tuned-profiles-sap.7
@@ -1,6 +1,6 @@
 .\"/* 
 .\" * All rights reserved
-.\" * Copyright (C) 2009-2014 Red Hat, Inc.
+.\" * Copyright (C) 2009-2017 Red Hat, Inc.
 .\" * Authors: Jaroslav Škarvada
 .\" *
 .\" * This program is free software; you can redistribute it and/or
@@ -18,7 +18,7 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES_SAP "7" "23 Sep 2014" "Fedora Power Management SIG" "tuned"
+.TH TUNED_PROFILES_SAP "7" "30 Mar 2017" "Fedora Power Management SIG" "tuned"
 .SH NAME
 tuned\-profiles\-sap - description of profiles provided for the SAP NetWeaver
 
@@ -48,7 +48,8 @@ areas a process may have.
 .BR tuned\-profiles\-sap\-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
-.BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-nfv\-host (7)
+.BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
