--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -1,6 +1,6 @@
 .\"/* 
 .\" * All rights reserved
-.\" * Copyright (C) 2009-2014 Red Hat, Inc.
+.\" * Copyright (C) 2009-2017 Red Hat, Inc.
 .\" * Authors: Jaroslav Škarvada, Jan Kaluža, Jan Včelák,
 .\" *          Marcela Mašláňová, Phil Knirsch
 .\" *
@@ -19,7 +19,7 @@
 .\" * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 .\" */
 .\" 
-.TH TUNED_PROFILES "7" "23 Sep 2014" "Fedora Power Management SIG" "tuned"
+.TH TUNED_PROFILES "7" "30 Mar 2017" "Fedora Power Management SIG" "tuned"
 .SH NAME
 tuned\-profiles - description of basic tuned profiles
 
@@ -124,7 +124,8 @@ It additionally enables more aggresive writeback of dirty pages.
 .BR tuned\-profiles\-sap-hana (7)
 .BR tuned\-profiles\-oracle (7)
 .BR tuned\-profiles\-realtime (7)
-.BR tuned\-profiles\-nfv (7)
+.BR tuned\-profiles\-nfv\-host (7)
+.BR tuned\-profiles\-nfv\-guest (7)
 .BR tuned\-profiles\-cpu\-partitioning (7)
 .BR tuned\-profiles\-compat (7)
 .SH AUTHOR
