fix a few spelling errors in the manpages
spotted by Debian's lintian tool

--- a/man/tuned-adm.8
+++ b/man/tuned-adm.8
@@ -63,7 +63,7 @@ value is set and what value is expected can be found in the log.
 Recommend profile suitable for your system. Currently only static detection is
 implemented - it decides according to data in /etc/system\-release\-cpe and
 virt\-what output. The rules for autodetection are defined in recommend.conf in
-profile directory. They can be overriden by user by putting the recommend.conf
+profile directory. They can be overridden by user by putting the recommend.conf
 into /etc/tuned. The default rules recommend profiles targeted to the best
 performance or balanced profile if unsure.
 
