--- a/man/tuned-main.conf.5
+++ b/man/tuned-main.conf.5
@@ -36,7 +36,7 @@ request profile switch, it may take up to 1 second until Tuned reacts).
 Increase this number for higher responsiveness times and more power
 savings (due to lower number of wakeups). In case you have unpatched
 Python 2 interpreter, this settings will have no visible effect,
-because the intepreter will poll 20 times per second. It is only
+because the interpreter will poll 20 times per second. It is only
 applicable if \fBdaemon\fR is enabled.
 
 .TP
