--- a/man/tuned-profiles-compat.7
+++ b/man/tuned-profiles-compat.7
@@ -69,7 +69,7 @@ with 'noatime' option. All tuned plugins are disabled.
 
 .TP
 .BI "enterprise\-storage"
-Server profile for high disk throughput performace tuning. Disables power
+Server profile for high disk throughput performance tuning. Disables power
 saving mechanisms and enables deadline IO scheduler. Enables hugepages and
 disables disk barriers. Disk readahead values are increased. CPU governor is
 set to performance.
