--- a/man/tuned-profiles-oracle.7
+++ b/man/tuned-profiles-oracle.7
@@ -31,7 +31,7 @@ The following profiles are provided:
 .TP
 .BI "oracle"
 Profile optimized for Oracle databases based on throughput\-performance profile.
-It additionaly disables transparent huge pages and modifies some other
+It additionally disables transparent huge pages and modifies some other
 performance related kernel parameters.
 
 .SH "FILES"
