--- a/man/tuned-profiles-sap-hana.7
+++ b/man/tuned-profiles-sap-hana.7
@@ -41,7 +41,7 @@ A performance optimized profile for the SAP HANA applications on VMware.
 It is based on throughput\-performance profile. It additionally disables
 transparent hugepages, locks CPU to the low C states (by PM QoS) and tunes sysctl
 regarding semaphores. It decreases virtual memory swappiness and disables large
-recieve offload for the network adapter.
+receive offload for the network adapter.
 
 .SH "FILES"
 .NF
