more spelling fixes found by lintian

--- a/man/tuned-main.conf.5
+++ b/man/tuned-main.conf.5
@@ -68,7 +68,7 @@ This controls whether to reapply sysctl settings from the \fI/etc/sysctl.conf\fR
 \fBsysctl --system\fR after Tuned sysctl settings are applied, i.e. if
 set to \fBTrue\fR or \fB1\fR Tuned sysctl settings will not override system
 sysctl settings. If set to \fBFalse\fR or \fB0\fR Tuned sysctl settings will
-override system sysctl settings. By defualt it's set to \fBTrue\fR.
+override system sysctl settings. By default it's set to \fBTrue\fR.
 
 .TP
 .BI default_instance_priority= INT
