--- a/man/tuned-profiles-compat.7
+++ b/man/tuned-profiles-compat.7
@@ -25,7 +25,7 @@ tuned\-profiles\-compat - description of profiles provided for backward compatib
 
 .SH DESCRIPTION
 These profiles are provided for backward compatibility with the tuned-1x.
-They are no longer mainained and may be dropped anytime in the future.
+They are no longer maintained and may be dropped anytime in the future.
 It's not recommended to use them for purposes other than backward compatibility.
 Some of them are only aliases to base tuned profiles. Please do not use the compat
 profiles on new installations and rather use profiles from base tuned package or
