--- a/man/tuned-profiles.7
+++ b/man/tuned-profiles.7
@@ -61,7 +61,7 @@ configures it to automatic power saving.
 .BI "powersave"
 Maximal power saving, at the moment it enables USB autosuspend (in case
 environment variable USB_AUTOSUSPEND is set to 1), enables ALPM power saving
-for SATA host adapters and sets the link power manamgent policy to min_power.
+for SATA host adapters and sets the link power management policy to min_power.
 It also enables WiFi power saving, enables multi core power savings scheduler
 for low wakeup systems and makes sure the ondemand governor is active (if
 supported by the current cpufreq driver). It sets the CPU energy performance
@@ -109,7 +109,7 @@ settings.
 .TP
 .BI "virtual\-host"
 Profile optimized for virtual hosts based on throughput\-performance profile.
-It additionally enables more aggresive writeback of dirty pages.
+It additionally enables more aggressive writeback of dirty pages.
 
 .SH "FILES"
 .nf
