--- a/man/tuned.conf.5
+++ b/man/tuned.conf.5
@@ -45,7 +45,7 @@ If you omit this option, all found devices will be tuned.
 replace=1
 If there is conflict between two plugins (meaning two plugins of the same
 type are trying to configure the same devices), then the plugin defined as
-last replaces all options defined by the previosly defined plugin.
+last replaces all options defined by the previously defined plugin.
 .LP
 Plugins can also have plugin related options.
 
